--- a/regression.ipynb
+++ b/regression.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Untitled6.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kdemertzis/Earthquakes/blob/main/regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -35,7 +46,7 @@
         "#!pip install pycaret\n",
         "#!pip install shap"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -51,7 +62,7 @@
         "import pycaret\n",
         "from pycaret.regression import *"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +73,7 @@
       "source": [
         "data = pd.read_csv('/content/park_1st_shock.csv')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +89,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +293,7 @@
       "source": [
         "#reg = setup(data = data, target=data.columns[-1], session_id=99, html=False, silent=True, verbose=False)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +309,7 @@
       "source": [
         "reg = setup(data = data, target='parkAng1stOrder', html=False, silent=True)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +714,7 @@
       "source": [
         "compare_models()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3793,7 +3804,7 @@
       "source": [
         "catboost = create_model(\"gbr\", fold=10)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3973,7 +3984,7 @@
       "source": [
         "tuned_model = tune_model(catboost)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
