--- a/Diff_equation_solver_all.ipynb
+++ b/Diff_equation_solver_all.ipynb
@@ -117,18 +117,14 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "#import autosklearn.regression\n",
         "import autokeras as ak\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
         "\n",
-        "\n",
-        "# Define the numerical method for static load\n",
         "def static_numerical_method(L, b, h, E, k, t, P):\n",
         "    I = (b*h**3)/12\n",
         "    deflection = (P*L**3)/(48*E*I)\n",
         "    return deflection\n",
         "\n",
-        "# Define the numerical method for dynamic load\n",
         "def dynamic_numerical_method(L, b, h, E, k, t, P, speed, direction):\n",
         "    I = (b*h**3)/12\n",
         "    omega = np.sqrt((P*L)/(E*I))\n",
@@ -137,35 +133,38 @@
         "    deflection = (P*L**3)/(48*E*I)*np.exp(-damping_ratio*omega*t)*np.sin(omega*np.sqrt(1-zeta**2)*t)\n",
         "    return deflection\n",
         "\n",
-        "# Generate sample data\n",
+        "def choose_speed_parameter():\n",
+        "  speed = float(input(\"Please choose the value of speed in the range [0, 1]: \"))\n",
+        "  if speed < 0 or speed > 1:\n",
+        "    print(\"Invalid value of speed. Please choose a value between 0 and 1.\")\n",
+        "    speed = choose_speed_parameter()\n",
+        "  return speed\n",
+        "\n",
+        "speed = choose_speed_parameter()\n",
+        "\n",
         "L_values = np.linspace(1, 5, 50)\n",
         "b = 1\n",
         "h = 1\n",
         "E = 20000\n",
         "k = 1000\n",
-        "t = 0.8\n",
         "P = 1000\n",
-        "speeds = np.array([0.1, 0.3, 0.5, 0.7, 0.9] * 10)\n",
         "directions = np.array([1, -1, 1, -1, 1] * 10)\n",
         "\n",
         "deflections_num = []\n",
-        "for L, speed, direction in zip(L_values, speeds, directions):\n",
+        "for L, direction in zip(L_values, directions):\n",
         "    if speed > 0.5:\n",
         "        deflection = dynamic_numerical_method(L, b, h, E, k, t, P, speed, direction)\n",
         "    else:\n",
         "        deflection = static_numerical_method(L, b, h, E, k, t, P)\n",
         "    deflections_num.append(deflection)\n",
         "\n",
-        "# Train the neural network using the numerical data\n",
-        "X_train = np.array([[L, b, h, E, k, t, P, speed, direction] for L, speed, direction in zip(L_values, speeds, directions)])\n",
+        "X_train = np.array([[L, b, h, E, k, t, P, speed, direction] for L, direction in zip(L_values, directions)])\n",
         "y_train = np.array(deflections_num)\n",
         "model = ak.StructuredDataRegressor(max_trials=5)\n",
         "model.fit(X_train, y_train)\n",
         "\n",
-        "# Predict the deflection using the machine learning method\n",
         "deflections_ml = model.predict(X_train).flatten()\n",
         "\n",
-        "# Calculate performance metrics\n",
         "mse = mean_squared_error(deflections_num, deflections_ml)\n",
         "mae = mean_absolute_error(deflections_num, deflections_ml)\n",
         "r2 = r2_score(deflections_num, deflections_ml)\n",
